# UnmannedSupermarketSimulationSystem

./: CMakeLists.txt  Commodity.cpp  Commodity.h  CommodityShelf.cpp  CommodityShelf.h  Helper.cpp  Helper.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  README.md  ShoppingCart.cpp  ShoppingCart.h  Supermarket.cpp  Supermarket.h  UseCase.cpp  UseCase.h  User.cpp  User.h  count_line.py  main.cpp  productpurchase.cpp  productpurchase.h  productpurchase.ui  simulator.cpp  simulator.h  simulator.ui  test.cpp  test.h
FaceRecognition/: add_faces.py  add_users.py  config.py  face_vectorize.py  init_faces.py  main.py  model.py  pgm2jpg.py  predict.py  result.txt  run_all.py  train.py  utils.py
MaskDetection/: config.py  image_path.txt  main.py  mask_detection.py  model.py  predict.py  run_all.py  train.py  utils.py
data/: carts.txt  commodities.txt  records.txt  users.txt
resources/: resize_image.py
spiders/: CommoditySpider.py  utils.py
spiders/cache/: goods.txt
